[tool.poetry]
name = "line-little-helper"
version = "0.1.1"
description = "Tools for working with molecular lines"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "line_little_helper"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
#toolkit = {git = "https://github.com/folguinch/toolkit.git"}
toolkit = {path = "../toolkit"}
tile-plotter = {path = "../tile-plotter"}
numpy = "^1.24.2"
astropy = "^5.2.1"
matplotlib = "^3.7.1"
astroquery = "^0.4.6"
radio-beam = "^0.3.4"
scipy = "^1.10.1"
spectral-cube = "^0.6.0"
pvextractor = "^0.3"
regions = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
