[tool.poetry]
name = "line-little-helper"
version = "0.1.1"
description = "Tools for working with molecular lines"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "line_little_helper"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
#toolkit = {git = "https://github.com/folguinch/toolkit.git"}
toolkit = {path = "../toolkit", develop = true}
tile-plotter = {path = "../tile-plotter", develop = true}
numpy = "^1.26.4"
astropy = "^6.0.0"
matplotlib = "^3.8.3"
astroquery = "^0.4.6"
radio-beam = "^0.3.4"
scipy = "^1.12.0"
spectral-cube = "^0.6.5"
pvextractor = "^0.4"
regions = "^0.7"

[tool.poetry.scripts]
subcube_extractor = 'line_little_helper.subcube_extractor:subcube_extractor'
moving_moments = 'line_little_helper.moving_moments:main'
symmetric_moments = 'line_little_helper.symmetric_moments:symmetric_moments'
pvmap_extractor = 'line_little_helper.pvmap_extractor:pvmap_extractor'
line_peak_map = 'line_little_helper.line_peak_map:line_peak_map'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
